@@ -1,0 +1,3 @@
+from lib.orbit_graphic_generator import generate_circle
+
+generate_circle(radius=2240, thickness=0.5, width=1, resolution=4480, output_file="orbit-aquilo.png")
