@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.18
 Date: ????
-  Changes:
+  Features:
+    - Python script added to generate orbit images. This is a variation of MeteorSwarm's script.
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.17
 Date: 2025-01-12
